<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/PhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number_textview"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@android:color/holo_red_light"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/AddPepperoniImageButton"
        android:layout_width="225dp"
        android:layout_height="125dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/add_pepperoni_button"
        android:hapticFeedbackEnabled="false"
        android:onClick="addPepperoniPizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNumber"
        app:srcCompat="@drawable/pepperoni_pizza" />

    <TextView
        android:id="@+id/AddPepperoniText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_pepperoni_text"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/AddPepperoniImageButton"
        app:layout_constraintEnd_toEndOf="@+id/AddPepperoniImageButton"
        app:layout_constraintStart_toStartOf="@+id/AddPepperoniImageButton"
        app:layout_constraintTop_toTopOf="@+id/AddPepperoniImageButton" />

    <ImageButton
        android:id="@+id/AddDeluxeImageButton"
        android:layout_width="225dp"
        android:layout_height="125dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/add_deluxe_button"
        android:hapticFeedbackEnabled="false"
        android:onClick="addDeluxePizza"
        app:layout_constraintEnd_toEndOf="@+id/AddPepperoniImageButton"
        app:layout_constraintStart_toStartOf="@+id/AddPepperoniImageButton"
        app:layout_constraintTop_toBottomOf="@+id/AddPepperoniImageButton"
        app:srcCompat="@drawable/deluxe_pizza" />

    <TextView
        android:id="@+id/AddDeluxeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_deluxe_text"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/AddDeluxeImageButton"
        app:layout_constraintEnd_toEndOf="@+id/AddDeluxeImageButton"
        app:layout_constraintStart_toStartOf="@+id/AddDeluxeImageButton"
        app:layout_constraintTop_toTopOf="@+id/AddDeluxeImageButton" />

    <ImageButton
        android:id="@+id/AddHawaiianImageButton"
        android:layout_width="225dp"
        android:layout_height="125dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/add_hawaiian_button"
        android:hapticFeedbackEnabled="false"
        android:onClick="addHawaiianPizza"
        app:layout_constraintEnd_toEndOf="@+id/AddDeluxeImageButton"
        app:layout_constraintStart_toStartOf="@+id/AddDeluxeImageButton"
        app:layout_constraintTop_toBottomOf="@+id/AddDeluxeImageButton"
        app:srcCompat="@drawable/hawaiian_pizza" />

    <TextView
        android:id="@+id/AddHawaiianText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_hawaiian_text"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/AddHawaiianImageButton"
        app:layout_constraintEnd_toEndOf="@+id/AddHawaiianImageButton"
        app:layout_constraintStart_toStartOf="@+id/AddHawaiianImageButton"
        app:layout_constraintTop_toTopOf="@+id/AddHawaiianImageButton" />

    <ImageButton
        android:id="@+id/CurrentOrderImageButton"
        android:layout_width="175dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/current_order_button"
        android:hapticFeedbackEnabled="false"
        android:onClick="seeCurrentOrder"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/StoreOrdersImageButton"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddHawaiianImageButton"
        app:srcCompat="@drawable/shopping_cart" />

    <TextView
        android:id="@+id/CurrentOrderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_order_text"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/CurrentOrderImageButton"
        app:layout_constraintEnd_toEndOf="@+id/CurrentOrderImageButton"
        app:layout_constraintStart_toStartOf="@+id/CurrentOrderImageButton"
        app:layout_constraintTop_toTopOf="@+id/CurrentOrderImageButton" />

    <ImageButton
        android:id="@+id/StoreOrdersImageButton"
        android:layout_width="175dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/store_orders_button"
        android:hapticFeedbackEnabled="false"
        android:onClick="seeStoreOrders"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddHawaiianImageButton"
        app:srcCompat="@drawable/pizza_restuarant" />

    <TextView
        android:id="@+id/StoreOrdersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_orders_text"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/StoreOrdersImageButton"
        app:layout_constraintEnd_toEndOf="@+id/StoreOrdersImageButton"
        app:layout_constraintStart_toStartOf="@+id/StoreOrdersImageButton"
        app:layout_constraintTop_toTopOf="@+id/StoreOrdersImageButton" />
</androidx.constraintlayout.widget.ConstraintLayout>