<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzaCustomizationActivity">

    <ImageView
        android:id="@+id/PizzaImage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/pizza_image"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/SizeSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SelectSizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/select_size"
        app:layout_constraintStart_toEndOf="@+id/PizzaImage"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/SizeSpinner"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/sizes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelectSizeText" />

    <TextView
        android:id="@+id/AvailableToppingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/available_toppings_text"
        app:layout_constraintEnd_toStartOf="@+id/AddedToppingsText"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PizzaImage" />

    <ListView
        android:id="@+id/AvailableToppingsList"
        android:layout_width="170dp"
        android:layout_height="275dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/AddedToppingsList"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AvailableToppingsText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/AddedToppingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:text="@string/added_toppings_text"
        app:layout_constraintBottom_toBottomOf="@+id/AvailableToppingsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/AvailableToppingsText"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/AddedToppingsList"
        android:layout_width="170dp"
        android:layout_height="275dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/AvailableToppingsList" />

    <Button
        android:id="@+id/AddToppingButton"
        android:layout_width="169dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="addTopping"
        android:text="@string/add_topping"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/RemoveToppingButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AvailableToppingsList" />

    <Button
        android:id="@+id/RemoveToppingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="removeTopping"
        android:text="@string/remove_topping"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/AddedToppingsList"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="@+id/AddedToppingsList"
        app:layout_constraintTop_toBottomOf="@+id/AddedToppingsList" />

    <TextView
        android:id="@+id/SubtotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="16dp"
        android:text="@string/subtotal_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddToppingButton" />

    <TextView
        android:id="@+id/SubtotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/subtotal_value_edittext"
        app:layout_constraintBottom_toBottomOf="@+id/SubtotalText"
        app:layout_constraintStart_toEndOf="@+id/SubtotalText"
        app:layout_constraintTop_toTopOf="@+id/SubtotalText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="EditableContentDescCheck" />

    <Button
        android:id="@+id/AddPizzaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="addToOrder"
        android:text="@string/add_pizza"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SubtotalValue"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>