<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentOrderActivity">

    <TextView
        android:id="@+id/PhoneNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:text="@string/phone_number_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PhoneNumberValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/PhoneNumberText"
        app:layout_constraintStart_toEndOf="@+id/PhoneNumberText"
        app:layout_constraintTop_toTopOf="@+id/PhoneNumberText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/NumPizzasText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:text="@string/number_of_pizzas_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNumberText" />

    <TextView
        android:id="@+id/NumPizzasValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/NumPizzasText"
        app:layout_constraintEnd_toEndOf="@+id/PhoneNumberValue"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/NumPizzasText"
        app:layout_constraintTop_toTopOf="@+id/NumPizzasText"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/PizzasList"
        android:layout_width="375dp"
        android:layout_height="450dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumPizzasText" />

    <Button
        android:id="@+id/RemovePizzaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="removePizza"
        android:text="@string/remove_pizza"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PizzasList" />

    <TextView
        android:id="@+id/CurrentOrderSubTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/subtotal_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PizzasList" />

    <TextView
        android:id="@+id/CurrentOrderSubtotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/CurrentOrderSubTotalText"
        app:layout_constraintStart_toEndOf="@+id/CurrentOrderSubTotalText"
        app:layout_constraintTop_toTopOf="@+id/CurrentOrderSubTotalText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/CurrentOrderSalesTaxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sales_tax_text"
        app:layout_constraintStart_toStartOf="@+id/CurrentOrderSubTotalText"
        app:layout_constraintTop_toBottomOf="@+id/CurrentOrderSubTotalText" />

    <TextView
        android:id="@+id/CurrentOrderSalesTaxValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/CurrentOrderSalesTaxText"
        app:layout_constraintEnd_toEndOf="@+id/CurrentOrderSubtotalValue"
        app:layout_constraintStart_toStartOf="@+id/CurrentOrderSubtotalValue"
        app:layout_constraintTop_toTopOf="@+id/CurrentOrderSalesTaxText" />

    <TextView
        android:id="@+id/CurrentOrderOrderTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/order_total_text"
        app:layout_constraintStart_toStartOf="@+id/CurrentOrderSalesTaxText"
        app:layout_constraintTop_toBottomOf="@+id/CurrentOrderSalesTaxText" />

    <TextView
        android:id="@+id/CurrentOrderOrderTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/CurrentOrderOrderTotalText"
        app:layout_constraintEnd_toEndOf="@+id/CurrentOrderSalesTaxValue"
        app:layout_constraintStart_toStartOf="@+id/CurrentOrderSalesTaxValue"
        app:layout_constraintTop_toTopOf="@+id/CurrentOrderOrderTotalText" />

    <Button
        android:id="@+id/PlaceOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="placeOrder"
        android:text="@string/place_order_text"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/RemovePizzaButton"
        app:layout_constraintStart_toStartOf="@+id/RemovePizzaButton"
        app:layout_constraintTop_toBottomOf="@+id/RemovePizzaButton"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>